<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBanner5"
        android:layout_width="577dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/banner"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitForm"
        android:layout_width="501dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#e6e6e6"
        android:gravity="center_horizontal|left|center_vertical"

        android:paddingLeft="95dp"
        android:text="@string/submit_form"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/details"
        android:layout_width="258dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:shadowColor="#535353"
        android:shadowRadius="1"
        android:text="Freephone: 0800 80 80 98\nTel: +64 3 479 7000\nEmail: university@otago.ac.nz "
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBanner5"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="142dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:shadowColor="#535353"
        android:shadowRadius="10"
        android:text="Contact Us"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBanner5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBanner5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/uploadImageBigTitle"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/askHelp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


    <ImageView
        android:id="@+id/paperPlane"
        android:layout_width="50dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/submitForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/submitForm"
        app:layout_constraintTop_toTopOf="@+id/submitForm"
        app:srcCompat="@drawable/paperplaceyellow" />

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="@+id/submitForm"
        app:layout_constraintTop_toTopOf="@+id/imgBanner5"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/personyellow" />

    <LinearLayout
        android:id="@+id/icons"
        android:layout_width="45dp"
        android:layout_height="198dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="124dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/links"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/links"
        app:layout_constraintVertical_bias="0.06">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/facebookicon" />

        <ImageView
            android:id="@+id/linkedInIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/linkedinicon" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:srcCompat="@drawable/twittericon" />

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:srcCompat="@drawable/instagramicon" />

        <ImageView
            android:id="@+id/ytIcon"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:srcCompat="@drawable/yticon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/links"
        android:layout_width="116dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/icons"
        app:layout_constraintTop_toBottomOf="@+id/submitForm"
        app:layout_constraintVertical_bias="0.459">

        <TextView
            android:id="@+id/facebookText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/facebookText" />

        <TextView
            android:id="@+id/linkedInText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/linkedInText" />

        <TextView
            android:id="@+id/twitterText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/twitterText" />

        <TextView
            android:id="@+id/instagramText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/instagramText" />

        <TextView
            android:id="@+id/youtubeText"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:text="@string/ytText" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="526dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/layout_bottom_navigation_view" />


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>